docs: 2.0.0-beta english

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -1,86 +1,84 @@
+Keep you all waiting! After several weeks of sprinting, the stable **Master CSS v2.0** beta version was finally released. The purpose of the early trial is to gather everyone's reactions, feedback and even suggestions for new features for generality and stability.
 
-各位久等了！經過幾週的衝刺，終於迎來穩定的 **Master CSS v2.0** 公測版，提前試用的目的是希望集結各位對於新功能的反應、回饋甚至建議來加強版本的通用及穩定，並且在公測期間做最後的修訂。
-
-安裝 Master CSS 公測版：
+Install the latest Master CSS Beta：
 ```bash
 npm install @master/css@beta
 ```
 
-讓我們通過公測說明來偷窺一些新功能吧！
+Let's get a sneak peek at some of the new features with the beta notes!
 
 
+##### On this page
 
-##### 目錄
-
-- [全新的預編譯模式](#全新的預編譯模式)
+- [Ahead-of-time compilation](#ahead-of-time-compilation)
   - [✨ Webpack](#-webpack)
   - [✨ Vite](#-vite)
   - [✨ Next.js](#-nextjs)
-- [全新的語法](#全新的語法)
-  - [✨ 群組選取器 Grouping Selectors](#-群組選取器-grouping-selectors)
-  - [✨ `color` 的替代名稱 `fg|foreground`](#-color-的替代名稱-fgforeground)
-  - [✨ 支援透過百分比 `%` 設置色彩透明度](#-支援透過百分比--設置色彩透明度)
-  - [✨ `-webkit-text-fill-color` 的速記 `(t|text):color`](#--webkit-text-fill-color-的速記-ttextcolor)
-- [全新的配置及管理](#全新的配置及管理)
-  - [⚙️ `configure()` 擴展及合併配置](#️-configure-擴展及合併配置)
-  - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
-  - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
-  - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
-- [內建主題切換與同步](#內建主題切換與同步)
-  - [✨ 切換主題方案](#-切換主題方案)
-  - [✨ 存取主題方案](#-存取主題方案)
-  - [✨ 自定主題方案配置](#-自定主題方案配置)
-  - [✨ 在 React 中實作主題切換與介面](#-在-react-中實作主題切換與介面)
-- [全新套件、升級與更動](#全新套件升級與更動)
+- [New syntax](#new-syntax)
+  - [✨ Grouping Selectors](#-grouping-selectors)
+  - [✨ An alternative `fg|foreground` for `color`](#-an-alternative-fgforeground-for-color)
+  - [✨ Support setting color transparency via percentage `%`](#-support-setting-color-transparency-via-percentage-)
+  - [✨ Shorthand for `-webkit-text-fill-color` `(t|text):color`](#-shorthand-for--webkit-text-fill-color-ttextcolor)
+- [New configuration and management](#new-configuration-and-management)
+  - [⚙️ `configure()` Extend and merge configuration](#️-configure-extend-and-merge-configuration)
+  - [⚙️ `init()` Manually initialize Master CSS](#️-init-manually-initialize-master-css)
+  - [✨ `config.themes` greatly simplifies markup with custom themes](#-configthemes-greatly-simplifies-markup-with-custom-themes)
+  - [✨ `config.selectors` custom selector tokens](#-configselectors-custom-selector-tokens)
+- [Built-in theme switching and synchronization](#built-in-theme-switching-and-synchronization)
+  - [✨ Switching themes](#-switching-themes)
+  - [✨ Accessing themes](#-accessing-themes)
+  - [✨ Customing theme configuration](#-customing-theme-configuration)
+  - [✨ Implement theme switching and UI in React](#-implement-theme-switching-and-ui-in-react)
+- [New packages, upgrades and changes](#new-packages-upgrades-and-changes)
   - [✨ CSS React](#-css-react)
   - [✨ CSS Compiler](#-css-compiler)
-  - [⬆️ 升級 Normal CSS](#️-升級-normal-css)
-  - [⬆️ 升級 CSS 語言服務](#️-升級-css-語言服務)
+  - [⬆️ Upgrade Normal CSS](#️-upgrade-normal-css)
+  - [⬆️ Upgrade CSS language service](#️-upgrade-css-language-service)
   - [🔄 `fade` -> `slate`](#-fade---slate)
   - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
   - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
   - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
   - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
-- [更多的 API](#更多的-api)
+- [More APIs](#more-apis)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
   - [`renderIntoHTML()`](#renderintohtml)
   - [`fillColorScale()`](#fillcolorscale)
   - [`defaultConfig`](#defaultconfig)
-- [再來是什麼？](#再來是什麼)
+- [What's next?](#whats-next)
 
 ---
 
-# 全新的預編譯模式
+# Ahead-of-time compilation
 
 https://user-images.githubusercontent.com/33840671/197425066-65be13ed-920d-4367-9b6e-1d2a90134313.mp4
 
-在介紹預編譯 ( Ahead-of-time Compilation ) 模式前，讓我們先回顧 v1.0 的優勢。
+Before introducing the precompiled mode, let's review the advantages of v1.0.
 
-Master CSS 在 v1.0 專注打造一個於執行期高效運行的 JIT 引擎，類名生成週期只需 `~0.01ms/class`，具有以下特點：
-- **⚡️ 沒有使用 CSS 轉換工具** —— __Tailwind CSS__ 在建置期使用了 `postcss`, `autoprefixer` 預轉換 CSS
-- **⚡️ 沒有使用 CSS 預處理器** —— __Styled Components__ 在執行期使用了 `css-to-react-native`, `stylis` 預處理 CSS
-- **⚡️ 沒有將類名進行 Hash 加工** —— __Styled Components__ 在執行期將類進行 hash 來群組特定域的 CSS 規則
-- **⚡️ 獨立的規則引擎容器** —— 大部分的 CSS-in-JS 工具如 __Styled Components__ 都依附著框架的渲染週期 ( 如 React )，在重新渲染時這類工具勢必會在執行期犧牲相當可觀的渲染成本。
+Master CSS in v1.0 focuses on creating a JIT engine that runs efficiently during runtime. The class name generation cycle only takes `~0.01ms/class`, with the following characteristics:
+- **⚡️ No CSS transformer** —— __Tailwind CSS__ uses `postcss` and `autoprefixer` to pre-transform CSS during build time
+- **⚡️ No CSS preprocessor** —— __Styled Components__ uses `css-to-react-native` and `stylis` to preprocess CSS at runtime
+- **⚡️ No hashed class names** —— __Styled Components__ hashes classes at runtime to group CSS rules
+- **⚡️ Standalone rules engine container** —— Most CSS-in-JS tools such as __Styled Components__ are dependent on the rendering cycle of the framework such as React. When re-rendering, such tools are bound to sacrifice considerable rendering costs during runtime.
 
-    Master CSS 的 JIT 依賴瀏覽器原生的 API，僅在類名異動時執行，與框架無關
-- **⚡️ 高效的規則引擎** —— Master CSS 的 JIT 只進行了一些低執行成本的行為，像是比對類名、解析類名，並且**在執行期高效運作一直是 v1.0 首要的考量**
-- **⚡️ 可解析的結構化語法** —— 由於 Master CSS 是一個全新的 CSS 語言，所以在語法上有一致的規則可透過相同的解析推演出原生的 CSS，這也是它如此輕量的原因
+    The JIT of Master CSS relies on the browser's native API and is only executed when the class name changes, regardless of the framework.
+- **⚡️ Performant rule engine** —— The JIT of Master CSS only performs some low-cost execution behaviors, such as comparing class names, parsing class names, and **Efficient operation during execution has always been the core consideration of v1.0**
+- **⚡️ Parsable structured syntax** —— Since Master CSS is a brand new CSS language, there're consistent rules in syntax, and native CSS can be deduced through the same process, which is why it's so lightweight
 
-在 v2.0，我們直接將飛快的 JIT 引擎應用在 AOT 預編譯模式，其運作原理是透過掃描編譯後的 `.html` 及 `.js` 中的字串或模板標記 ( Tailwind CSS 及 Windi CSS 是掃描原始碼，如 `.jsx`, `.vue` )，經過規則引擎比對是否為 Master CSS 類名並輸出為一包 CSS 檔。
+In v2.0, we directly applied the fast JIT engine to the AOT compilation mode, which works by scanning the compiled `.html` and `.js` for strings or template tags (Both tailwind CSS and Windi CSS scan the source code, such as `.jsx`, `.vue` ), through the rule engine to compare whether it's the Master CSS class name and output as a CSS file.
 
-我們認為掃描編譯後的 `.html` 及 `.js` 有以下優勢：
+We believe that scanning compiled `.html` and `.js` has the following advantages:
 
-- ✅ 無需針對框架特殊的檔案格式進行解析，擁有更好的相容性
-- ✅ 無需仰賴 `loader` 載入特定的檔案格式，如 `webpack`
-- ✅ 依賴建置工具的相依樹自動抓取來源
+- ✅ No need to parse the special file format of the framework, with better compatibility
+- ✅ No need to rely on `loader` to load specific file formats like `webpack`
+- ✅ Rely on build tool's dependency tree automatically map source code
 
-安裝 Master CSS 編譯器公測版：
+Install the Master CSS Compiler beta:
 ```bash
 npm install @master/css-compiler@beta
 ```
 
-我們提供了與主流建置工具的整合，你幾乎可以零配置啟動 Master CSS 的 AOT 編譯模式。
+We provide integration with mainstream build tools, and you can start Master CSS's AOT compilation mode with almost zero configuration.
 
 ## ✨ Webpack
 ```js
@@ -131,48 +129,47 @@ const nextConfig = {
 module.exports = nextConfig
 ```
 
-更多的框架及建置工具指南將和 v2.0 一同推出...
+More guides for the frameworks and build tools coming with v2.0...
 
-🥳 現在，直接啟動你的開發伺服器，Master CSS 的 AOT 編譯引擎將隨即運行！
-
+🥳 Now, start your development server directly, and the AOT compilation engine of Master CSS will run right away!
 
 ---
 
-# 全新的語法
+# New syntax
 
-## ✨ 群組選取器 Grouping Selectors
-這個功能你一定不陌生，在原生 CSS 你可以使用 `,` 來群組選取器：
+## ✨ Grouping Selectors
+In native CSS, you can use `,` to group selectors:
 ```css
 :before,
 :after {
    /* declarations */
 }
 ```
-現在，透過類名更快速地實現相同的功能
+The same is now faster via the class name
 ```diff
 - <div class="content:'`':before content:'`':after"></div>
 + <div class="content:'`':before,:after"></div>
 ```
-原先的群組語法也支援群組選取器
+The group syntax also supports group selectors
 ```diff
 - <div class="{content:'`';fg:gray;mx:1}:before {content:'`';fg:gray;mx:1}:after"></div>
 + <div class="{content:'`';fg:gray;mx:1}:before,:after"></div>
 ```
 
-## ✨ `color` 的替代名稱 `fg|foreground`
+## ✨ An alternative `fg|foreground` for `color`
 
-過去你會看到 `text-blue`/`font-blue` 的命名風格並且 CSS 規則通常是：
+Traditionally you'll see `text-blue`/`font-blue` naming style and CSS rules are usually:
 ```css
 .text-blue { color: blue }
 .font-blue { color: blue }
 ```
-但是 CSS 的 `color` 設置的對象不只是文字，它還設置了 `border-color`, `box-shadow` 等顏色相關的屬性，那麼以 `text-*` 作為 `color` 的代稱不覺得奇怪嗎？
+However, the object set by CSS `color` is not only text, it also sets color-related properties such as `border-color`, `box-shadow`, so it is not strange to use `text-*` as the name of `color` ?
 
-甚至連原生 CSS 將前景色稱為 `color` 含義也太過廣泛了，因此我們提供 `fg|foreground` 作為你設置前景色的另一個代稱，而且前景剛好也與背景 `bg|background` 相呼應：
+Even native CSS calling the foreground `color` is too broad, so we provide `fg|foreground` as an alternative name for you to set the foreground color, and the foreground also happens to echo the background `bg|background` :
 ```html
 <button class="fg:white bg:black">Submit</button>
 ```
-這裡比較大的改動是我們不再支持 `(f|font):color`：
+The big change here is that we no longer support `(f|font):color`:
 ```diff
   <p class="color:blue">
 - <p class="f:blue">
@@ -180,25 +177,25 @@ module.exports = nextConfig
 + <p class="fg:blue">
 + <p class="foreground:blue">
 ```
-你可以透過以下 Regular Expression 在 VSCode 全域取代：
+You can replace it globally in VSCode with the following Regular Expression:
 ```
 ?:font|f|[^-]color):(fade|slate|gray|brown|orange|gold|yellow|grass|green|beryl|teal|cyan|sky|blue|indigo|violet|purple|fuchsia|pink|crimson|red)
 ```
-取代為：
+Replace as
 ```
 fg:$1
 ```
-⚠️ 建議執行前先將 `unstaged` 的檔案進行 `commit` 以免取代過程發生無法挽回的錯誤。
+⚠️ It is recommended to `commit` the `unstaged` file before execution to avoid irreversible errors during the replacement process.
 
-## ✨ 支援透過百分比 `%` 設置色彩透明度
+## ✨ Support setting color transparency via percentage `%`
 和原生相同，支援透過百分比變更色彩透明度的語法。兩種寫法皆可，因人而異。
 ```diff
   <div class="bg:sky-50/.75">v1.0+</div>
 + <div class="bg:sky-50/75%">v2.0+</div>
 ```
 
-## ✨ `-webkit-text-fill-color` 的速記 `(t|text):color`
-為文字色彩提供了新的速記：
+## ✨ Shorthand for `-webkit-text-fill-color` `(t|text):color`
+A new shorthand is provided for text color:
 ```diff
   <div class="text-fill-color:pink-60"></div>
 + <div class="text:pink-60"></div>
@@ -207,7 +204,7 @@ fg:$1
 
 ---
 
-# 全新的配置及管理
+# New configuration and management
 在 v1.0 時我們提供 `Style.extend` 讓你自定義配置：
 ```diff
 - import { Style } from '@master/css'
@@ -216,9 +213,9 @@ fg:$1
 - })
 - ...
 ```
-許多人反應這樣的配置不是那麼友善及俐落，在經過數週的設計及改良，我們終於毫無懸念了 😌
+Many people said that this configuration is not so friendly and neat, after weeks of design and improvement, we finally have no suspense 😌
 
-讓我們來概覽全新的 `master.css.js` 配置檔 ✨
+Let's take a look at the new `master.css.js` configuration file ✨
 ```js
 const { configure } = require('@master/css')
 
@@ -277,16 +274,16 @@ module.exports = configure({
     Rules: []
 })
 ```
-你可能已經注意到一些新的配置，我們稍後會提到。
+You may have noticed some new configurations, which we will mention later.
 
-## ⚙️ `configure()` 擴展及合併配置
-通常你會希望以擴展的方式來增添額外的配置，我們設計了 `configure()` 的方法讓你在保有預設配置的同時進行擴展及合併配置。
+## ⚙️ `configure()` Extend and merge configuration
+Often you want to add additional configuration in an extended way, we designed the `configure()` method to allow you to extend and merge configuration while keeping the default configuration.
 
-- 深層 `merge` 物件
-- 深層 `concat` 陣列
-- 擴展預設配置
+- Deeply `merge` object
+- Deeply `concat` array
+- Extended default configuration
 
-舉例：在 `master.css.js` 新增 `'hide-text'` 語意類名及 `'ocean'` 主題，並保留預設值。
+Example: Add `'hide-text'` semantic class name and `'ocean'` theme to `master.css.js`, and keep the default values.
 ```js
 const { configure } = require('@master/css')
 
@@ -299,7 +296,7 @@ module.exports = configure({
     ...
 })
 ```
-最終 `import config from './master.css'` 取得的配置結果：
+The final configuration result obtained by `import config from './master.css'`:
 ```diff
 {
     ...,
@@ -318,8 +315,8 @@ module.exports = configure({
 }
 ```
 
-## ⚙️ `init()` 手動初始化 Master CSS
-搭配自訂配置初始化 Master CSS：
+## ⚙️ `init()` Manually initialize Master CSS
+Initialize Master CSS with custom configuration:
 ```js
 // Create a `./master.{js,ts}` file to manage initialization.
 
@@ -329,12 +326,12 @@ import { init } from '@master/css'
 export const css = init(config)
 ```
 
-別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
+Don't forget to include `./master.js` at the entry point of the app, e.g. `./main.js`
 ```js
 import './master';
 ```
 
-如果你是在 `<head>` 中透過 CDN 快速啟用，引入後請立即初始化 Master CSS：
+If you're using a CDN in `<head>` for quick enablement, initialize the Master CSS immediately after importing:
 ```diff
 ...
 <head>
@@ -344,8 +341,8 @@ import './master';
 ...
 ```
 
-## ✨ `config.themes` 透過自訂主題大幅簡化標記
-依據不同的主題自訂 `classes`, `colors` 且合併並保留預設值：
+## ✨ `config.themes` greatly simplifies markup with custom themes
+Customize `classes`, `colors` according to different themes and combine and keep default values:
 ```js
 const { configure } = require('@master/css')
 
@@ -386,7 +383,7 @@ module.exports = configure({
     ...
 })
 ```
-根據 `light` 及 `dark` 設置內容前景色：
+Set the content foreground color according to `light` and `dark`:
 ```diff
 - <div class="fg:slate-30@light fg:gray-60@dark">v1.0+</div>
 + <div class="fg:content">v2.0+</div>
@@ -397,14 +394,14 @@ module.exports = configure({
 + .dark .fg\:content { color: #9e9da0 }
 + .light .fg\:content { color: #323e52 }
 ```
-再看一個進階的選取，根據 `light` 及 `dark` 設置重點前景色：
+Let's look at an advanced selection, set the key foreground color according to `light` and `dark`:
 ```diff
 - <div class="fg:slate-10_:where(strong,b,code,a,mark,del)@light fg:gray-80_:where(strong,b,code,a,mark,del)@dark">v1.0+</div>
 + <div class="fg:major_:where(strong,b,code,a,mark,del)">v2.0+</div>
 ```
 
-## ✨ `config.selectors` 自訂選取器標記
-擴展自訂選取器標記，合併並保留預設值：
+## ✨ `config.selectors` custom selector tokens
+Extend custom selector tokens, merge and keep defaults:
 ```js
 const { configure } = require('@master/css')
 
@@ -416,14 +413,14 @@ module.exports = configure({
     ...
 })
 ```
-應用它：
+Apply it：
 ```diff
 - <div class="hide>div>:first+button">same</div>
 + <div class="hide>custom"></div>
 ```
-⚠️ 這個配置的本意是用來合理地簡化原生 CSS 的選取器像是 `hide:first-child` -> `hide:first`，在縮減的同時建議考量專案的可維護性。
+⚠️ The original intention of this configuration is to reasonably simplify native CSS selectors like `hide:first-child` -> `hide:first`, and it's recommended to consider the maintainability of the project while reducing.
 
-你也可以將一個選取器標記對應多個，以預設的供應商前綴為例：
+You can also map one selector token to multiple ones, take the default vendor prefix as an example:
 ```js
 const { configure } = require('@master/css')
 
@@ -437,11 +434,11 @@ module.exports = configure({
     ...
 })
 ```
-應用它：
+Apply it:
 ```html
 <div class="bg:red::slider-thumb">...</div>
 ```
-生成的 CSS 規則：
+Generated CSS rules:
 ```css
 .bg\:red\:\:slider-thumb::-webkit-slider-thumb {
     background-color: #d11a1e
@@ -451,37 +448,37 @@ module.exports = configure({
     background-color: #d11a1e
 }
 ```
-原生 CSS 只要有一個選取器無效整個規則都不會被套用，Master CSS 會自動將包含供應商前綴的選取器分為兩條規則產生。
+In native CSS, as long as one selector is invalid, the entire rule will not be applied. Master CSS will automatically separate the selector containing the vendor prefix into two rules to generate.
 
-[查看所有預設的選取器標記](https://github.com/master-co/css/tree/beta/src/config/selectors.js)
+[Check out selector tokens for all presets](https://github.com/master-co/css/tree/beta/src/config/selectors.js)
 
 ---
 
-# 內建主題切換與同步
-由於主題切換的邏輯大同小異且很常被使用，我們決定在 v2.0 內建該功能，包含：
+# Built-in theme switching and synchronization
+Since the logic of theme switching is similar and is often used, we decided to build this function in v2.0, including:
 
-- 零配置啟用
-- 與作業系統偏好同步 `system`
-- 儲存用戶偏好，與 `localStorage` 同步
-- 搭配設置 `color-scheme`，例如：`<html style="color-scheme: dark">`
-- 透過類 `class` 切換主題，例如：`<html class="dark">`
+- Zero configuration enabled
+- Sync `system` with your OS preferences
+- Store user preferences, sync with `localStorage`
+- With the setting `color-scheme`, for example: `<html style="color-scheme: dark">`
+- Switch themes through `class`, for example: `<html class="dark">`
 
-## ✨ 切換主題方案 
+## ✨ Switching themes
 
 ```ts
 import { css } from './master'
 css.scheme = 'dark' // default: 'system'
 ```
 
-## ✨ 存取主題方案
+## ✨ Accessing themes
 ```ts
 import { css } from './master'
 console.log(css.scheme) // default: 'light', 'dark', 'system'
 console.log(css.theme) // default: 'light', 'dark'
 ```
 
-## ✨ 自定主題方案配置
-以下配置皆為預設值，其中 `scheme.preference` 為網站預設的主題方案偏好。
+## ✨ Customing theme configuration
+The following configurations are all default values, where `scheme.preference` is the default theme scheme preference of the app.
 ```js
 const { configure } = require('@master/css')
 
@@ -498,8 +495,8 @@ module.exports = configure({
 })
 ```
 
-## ✨ 在 React 中實作主題切換與介面
-我們提供了 [useScheme](https://github.com/master-co/css.react#usescheme) 掛鈎，讓你無痛依賴 React 的渲染機制
+## ✨ Implement theme switching and UI in React
+We provide the [useScheme](https://github.com/master-co/css.react#usescheme) hook, allowing you to painlessly rely on React's rendering mechanism
 ```tsx
 import { css } from './master';
 import { useEffected, useScheme } from '@master/css.react'
@@ -526,7 +523,7 @@ export default function ThemeSchemeButton() {
 
 ---
 
-# 全新套件、升級與更動
+# New packages, upgrades and changes
 
 ## ✨ CSS React
 [@master/css.react](https://github.com/master-co/css.react) - React hooks for Master CSS
@@ -534,13 +531,13 @@ export default function ThemeSchemeButton() {
 ## ✨ CSS Compiler
 [@master/css-compiler](https://github.com/master-co/css-compiler) - Compile Master CSS ahead of time with zero-configuration integration with build tools
 
-## ⬆️ 升級 Normal CSS
+## ⬆️ Upgrade Normal CSS
 [@master/normal.css](https://github.com/master-co/normal.css) - Normalize browser's styles. ~500B
 ```bash
 npm install @master/normal.css@beta
 ```
 
-不再支持 `--font-mono`, `--font-sans`, `--font-serif` CSS 變數
+Removed support for `--font-mono`, `--font-sans`, `--font-serif`
 ```diff
 - :root {
 -     --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
@@ -559,19 +556,18 @@ body {
 -     font-family: var(--font-mono);
 - }
 ```
-請改用 Master CSS 的語法來預設全局的字體：
+Please use Master CSS syntax instead to preset global fonts:
 ```html
 <body class="font:sans font:mono_:where(code,kbd,samp)">
     ...
 </body>
 ```
 
-## ⬆️ 升級 CSS 語言服務
-請升級 VSCode 上的 [Master CSS 語言服務擴充](https://github.com/master-co/css-language-service)到 v2.0
-
+## ⬆️ Upgrade CSS language service
+Please upgrade the [Master CSS Language Service Extension](https://github.com/master-co/css-language-service) on VSCode to v2.0
 
 ## 🔄 `fade` -> `slate`
-重新命名色彩中的 `fade` 為 `slate` 石灰色，以符合普遍的色彩命名。
+Renamed `fade` in colors to `slate` lime to match common color names.
 ```diff
 -    <p class="bg:fade ...">fade</p>
 +    <p class="bg:slate ...">slate</p>
@@ -603,11 +599,11 @@ body {
 
 ---
 
-# 更多的 API
-渲染相關的 API 在 v1.0 主要用於伺服器渲染 ( Server-side Rendering ) 及靜態站點生成 ( Static-site Generation )，在 v2.0 沒有太大的改變，只有進行局部的 API 優化。
+# More APIs
+Rendering-related APIs are mainly used for Server-side Rendering and Static-site Generation in v1.0. There are no major changes in v2.0, except for partial API optimization.
 
 ## `render()`
-傳入類名陣列並返回產生的 CSS 文本。
+Pass in an array of class names and return the resulting CSS text.
 ```jsx
 import { render } from '@master/css'
 import { css } from './init'
@@ -620,7 +616,7 @@ rendered result:
 ```
 
 ## `renderFromHTML()`
-傳入 HTML 文本、掃描並返回產生 CSS 文本。
+Pass in HTML text, scan and return to produce CSS text.
 ```jsx
 import { renderFromHTML } from '@master/css'
 import { css } from './init'
@@ -640,7 +636,7 @@ rendered result:
 ```
 
 ## `renderIntoHTML()`
-傳入 HTML 文本 → 掃描並產生 CSS 文本 → 注入到 HTML `<head>` 中 → 返回渲染的 HTML 文本結果。
+Pass in HTML text → scan and produce CSS text → inject into HTML `<head>` → return rendered HTML text result.
 ```js
 import { renderIntoHTML } from '@master/css'
 import { css } from './init'
@@ -667,7 +663,7 @@ rendered result:
 ```
 
 ## `fillColorScale()`
-將未定義的色階值以相鄰色階值的平均填滿 `1,2,...99`。
+Fills undefined level values to `1,2,...99` with the average of adjacent level values.
 ```js
 import { fillColorScale, configure } from '@master/css'
 
@@ -688,10 +684,10 @@ module.exports = configure({
     }
 )
 ```
-如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
+In this way, you can choose not only `blue-40`, `blue-50` but also `blue-67`, `blue-72` and other values for better color rendering.
 
 ## `defaultConfig`
-我們輸出了所有的預設配置 [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
+We export all the default configuration [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts), you can access it by:
 ```js
 import { defaultConfig } from '@master/css'
 
@@ -699,7 +695,7 @@ console.log(defaultConfig.colors)
 console.log(defaultConfig.breakpoints)
 // ...
 ```
-或單獨引入：
+or imported separately:
 ```js
 import { defaultColors, defaultBreakpoints } from '@master/css'
 
@@ -707,13 +703,13 @@ console.log(defaultColors)
 console.log(defaultBreakpoints)
 // ...
 ```
-[查看所有預設配置](https://github.com/master-co/css/tree/beta/src/config)
+[Check out all preset configurations](https://github.com/master-co/css/tree/beta/src/config)
 
 ---
 
-# 再來是什麼？
+# What's next?
 
-1. **文件 `docs.master.co` 改版**：新的全站搜尋功能及介面
-2. **首頁 `css.master.co` 改版**：過去我們將全部的精力投入在 Master CSS 核心功能研發，許多經典特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
-3. **正式版 v2.0**：公測版本發布後，我們預計在一個月後發布正式版
-4. **Master UI 系列**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，正細火慢熬中，預計於年底釋出基本的開源元件如 `button`, `card`, `tabs` 等。
+1. **Document `docs.master.co` revision**: new site-wide search feautre and UI
+2. **Homepage `css.master.co` revision**: In the past, we put all our energy into the research and development of the core functions of Master CSS, and many classic features have been buried in the documentation. The communication of the advantages through visual enhancement.
+3. **Official version v2.0**: We expect to release the official version one month later
+4. **Master UI series**: I believe many people can't wait for the Master UI series. We pay great attention to the details of the interface and the quality of the source code, which are being carefully produced. It is expected to release basic open source components such as `button`, `card`, `tabs`, etc. before the end of the year.
