docs: 2.0.0-beta readme

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -713,3 +713,7 @@ console.log(defaultBreakpoints)
 2. **Homepage `css.master.co` revision**: In the past, we put all our energy into the research and development of the core functions of Master CSS, and many classic features have been buried in the documentation. The communication of the advantages through visual enhancement.
 3. **Official version v2.0**: We expect to release the official version one month later
 4. **Master UI series**: I believe many people can't wait for the Master UI series. We pay great attention to the details of the interface and the quality of the source code, which are being carefully produced. It is expected to release basic open source components such as `button`, `card`, `tabs`, etc. before the end of the year.
+
+---
+
+> [Go to this discussion →](https://github.com/master-co/css/discussions/79)
