--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -717,3 +717,7 @@ console.log(defaultBreakpoints)
 2. **首頁 `css.master.co` 改版**：過去我們將全部的精力投入在 Master CSS 核心功能研發，許多經典特色一直埋沒在文件中，透過視覺加強優勢的傳達將會是這次改版的重點！
 3. **正式版 v2.0**：公測版本發布後，我們預計在一個月後發布正式版
 4. **Master UI 系列**：相信很多人都迫不及待 Master UI 的系列，我們極度講究介面的細節及原始碼的品質，正細火慢熬中，預計於年底釋出基本的開源元件如 `button`, `card`, `tabs` 等。
+
+---
+
+> [返回討論串 →](https://github.com/master-co/css/discussions/79)
