fix: `type: module` in package.json

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -87,7 +87,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/webpack
 ```js
 /* ⚙️ webpack.config.js */
 
-const { MasterCSSWebpackPlugin } = require('@master/css.aot')
+const { MasterCSSWebpackPlugin } = require('@master/css-compiler')
 
 module.exports = {
     plugins: [
@@ -101,7 +101,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/vite
 ```js
 /* ⚙️ vite.config.js */
 
-import { MasterCSSVitePlugin } from '../../dist'
+import { MasterCSSVitePlugin } from '@master/css-compiler'
 
 export default defineConfig({
     plugins: [
@@ -116,7 +116,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/nextjs
 ```js
 /* ⚙️ next.config.js */
 
-const { MasterCSSWebpackPlugin } = require('@master/css.aot')
+const { MasterCSSWebpackPlugin } = require('@master/css-compiler')
 
 const nextConfig = {
     webpack: (config) => {
