--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -85,7 +85,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/webpack
 ```js
 /* ⚙️ webpack.config.js */
 
-const { MasterCSSWebpackPlugin } = require('@master/css.aot')
+const { MasterCSSWebpackPlugin } = require('@master/css-compiler')
 
 module.exports = {
     plugins: [
@@ -99,7 +99,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/vite
 ```js
 /* ⚙️ vite.config.js */
 
-import { MasterCSSVitePlugin } from '../../dist'
+import { MasterCSSVitePlugin } from '@master/css-compiler'
 
 export default defineConfig({
     plugins: [
@@ -114,7 +114,7 @@ https://github.com/master-co/css-compiler/tree/beta/examples/nextjs
 ```js
 /* ⚙️ next.config.js */
 
-const { MasterCSSWebpackPlugin } = require('@master/css.aot')
+const { MasterCSSWebpackPlugin } = require('@master/css-compiler')
 
 const nextConfig = {
     webpack: (config) => {
