docs: vite warning

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -110,6 +110,7 @@ export default defineConfig({
 })
 
 ```
+⚠️ 創建 Vite 專案後務必移除 `package.json` 中的 `"type": "module"`
 
 ## ✨ Next.js
 https://github.com/master-co/css-compiler/tree/beta/examples/nextjs
