--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -106,8 +106,8 @@ export default defineConfig({
         MasterCSSVitePlugin()
     ]
 })
-
 ```
+⚠️ Be sure to remove `"type": "module"` in `package.json` after creating the vite project
 
 ## ✨ Next.js
 https://github.com/master-co/css-compiler/tree/beta/examples/nextjs
