docs: 2.0.0-beta.tw readme

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -34,11 +34,11 @@ Let's get a sneak peek at some of the new features with the beta notes!
   - [✨ CSS Compiler](#-css-compiler)
   - [⬆️ Upgrade Normal CSS](#️-upgrade-normal-css)
   - [⬆️ Upgrade CSS language service](#️-upgrade-css-language-service)
-  - [🔄 `fade` -> `slate`](#-fade---slate)
-  - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
-  - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
-  - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
-  - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
+  - [🔄 `fade` -\> `slate`](#-fade---slate)
+  - [🔄 `MasterStyleSheet` -\> `MasterCSS`](#-masterstylesheet---mastercss)
+  - [🔄 `MasterStyle` -\> `MasterCSSRule`](#-masterstyle---mastercssrule)
+  - [🔄 `id="master-css"` -\> `title="master"`](#-idmaster-css---titlemaster)
+  - [🔄 `config.colorSchemes` -\> `config.themes`](#-configcolorschemes---configthemes)
 - [More APIs](#more-apis)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
@@ -107,7 +107,6 @@ export default defineConfig({
     ]
 })
 ```
-⚠️ Be sure to remove `"type": "module"` in `package.json` after creating the vite project
 
 ## ✨ Next.js
 https://github.com/master-co/css-compiler/tree/beta/examples/nextjs
