feat: remove `configure()` api, preset extend behavior and provide `override` config

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -20,7 +20,7 @@ Let's get a sneak peek at some of the new features with the beta notes!
   - [✨ Support setting color transparency via percentage `%`](#-support-setting-color-transparency-via-percentage-)
   - [✨ Shorthand for `-webkit-text-fill-color` `(t|text):color`](#-shorthand-for--webkit-text-fill-color-ttextcolor)
 - [New configuration and management](#new-configuration-and-management)
-  - [⚙️ `configure()` Extend and merge configuration](#️-configure-extend-and-merge-configuration)
+  - [⚙️ Extend and merge configuration](#️-extend-and-merge-configuration)
   - [⚙️ `init()` Manually initialize Master CSS](#️-init-manually-initialize-master-css)
   - [✨ `config.themes` greatly simplifies markup with custom themes](#-configthemes-greatly-simplifies-markup-with-custom-themes)
   - [✨ `config.selectors` custom selector tokens](#-configselectors-custom-selector-tokens)
@@ -219,9 +219,7 @@ Many people said that this configuration is not so friendly and neat, after week
 
 Let's take a look at the new `master.css.js` configuration file ✨
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     colors: {
         primary: '#175fe9',
     },
@@ -274,12 +272,12 @@ module.exports = configure({
     },
     rootSize: 16,
     Rules: []
-})
+}
 ```
 You may have noticed some new configurations, which we will mention later.
 
-## ⚙️ `configure()` Extend and merge configuration
-Often you want to add additional configuration in an extended way, we designed the `configure()` method to allow you to extend and merge configuration while keeping the default configuration.
+## ⚙️ Extend and merge configuration
+Often you'll want to add additional configuration in an extended way, we have built-in `extend()` method that allows you to extend and merge configuration while keeping the default configuration.
 
 - Deeply `merge` object
 - Deeply `concat` array
@@ -287,18 +285,23 @@ Often you want to add additional configuration in an extended way, we designed t
 
 Example: Add `'hide-text'` semantic class name and `'ocean'` theme to `master.css.js`, and keep the default values.
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     semantics: {
         'hide-text': 'font-size:0px'
     },
     themes: ['ocean']
     ...
-})
+}
 ```
-The final configuration result obtained by `import config from './master.css'`:
+Import custom configuration in centrally managed `master.js` and initialize:
+```js
+import config from './master.css'
+import { init } from '@master/css'
+
+export const css = init(config)
+```
+Extended configuration `css.config` results:
 ```diff
 {
     ...,
@@ -346,9 +349,7 @@ If you're using a CDN in `<head>` for quick enablement, initialize the Master CS
 ## ✨ `config.themes` greatly simplifies markup with custom themes
 Customize `classes`, `colors` according to different themes and combine and keep default values:
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     colors: {
         primary: '#175fe9',
@@ -383,7 +384,7 @@ module.exports = configure({
         }
     },
     ...
-})
+}
 ```
 Set the content foreground color according to `light` and `dark`:
 ```diff
@@ -405,15 +406,13 @@ Let's look at an advanced selection, set the key foreground color according to `
 ## ✨ `config.selectors` custom selector tokens
 Extend custom selector tokens, merge and keep defaults:
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     selectors: {
         '>custom': '>div>:first+button'
     },
     ...
-})
+}
 ```
 Apply it：
 ```diff
@@ -424,9 +423,7 @@ Apply it：
 
 You can also map one selector token to multiple ones, take the default vendor prefix as an example:
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     selectors: {
         '::slider-thumb': ['::-webkit-slider-thumb', '::-moz-range-thumb'],
@@ -434,7 +431,7 @@ module.exports = configure({
         ...
     },
     ...
-})
+}
 ```
 Apply it:
 ```html
@@ -482,9 +479,7 @@ console.log(css.theme) // default: 'light', 'dark'
 ## ✨ Customing theme configuration
 The following configurations are all default values, where `scheme.preference` is the default theme scheme preference of the app.
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     scheme: {
         preference: 'system', // 'system', 'dark', 'light'
@@ -494,7 +489,7 @@ module.exports = configure({
         }
     }
     ...
-})
+}
 ```
 
 ## ✨ Implement theme switching and UI in React
@@ -667,9 +662,9 @@ rendered result:
 ## `fillColorScale()`
 Fills undefined level values to `1,2,...99` with the average of adjacent level values.
 ```js
-import { fillColorScale, configure } from '@master/css'
+import { fillColorScale } from '@master/css'
 
-module.exports = configure({
+module.exports = {
     colors: {
         blue: fillColorScale({
             95: '001141',
@@ -684,7 +679,7 @@ module.exports = configure({
             10: 'edf5ff'
         })
     }
-)
+}
 ```
 In this way, you can choose not only `blue-40`, `blue-50` but also `blue-67`, `blue-72` and other values for better color rendering.
 
