--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -22,7 +22,7 @@ npm install @master/css@beta
   - [✨ 支援透過百分比 `%` 設置色彩透明度](#-支援透過百分比--設置色彩透明度)
   - [✨ `-webkit-text-fill-color` 的速記 `(t|text):color`](#--webkit-text-fill-color-的速記-ttextcolor)
 - [全新的配置及管理](#全新的配置及管理)
-  - [⚙️ `configure()` 擴展及合併配置](#️-configure-擴展及合併配置)
+  - [⚙️ 擴展及合併配置](#️-擴展及合併配置)
   - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
   - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
   - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
@@ -36,11 +36,11 @@ npm install @master/css@beta
   - [✨ CSS Compiler](#-css-compiler)
   - [⬆️ 升級 Normal CSS](#️-升級-normal-css)
   - [⬆️ 升級 CSS 語言服務](#️-升級-css-語言服務)
-  - [🔄 `fade` -> `slate`](#-fade---slate)
-  - [🔄 `MasterStyleSheet` -> `MasterCSS`](#-masterstylesheet---mastercss)
-  - [🔄 `MasterStyle` -> `MasterCSSRule`](#-masterstyle---mastercssrule)
-  - [🔄 `id="master-css"` -> `title="master"`](#-idmaster-css---titlemaster)
-  - [🔄 `config.colorSchemes` -> `config.themes`](#-configcolorschemes---configthemes)
+  - [🔄 `fade` -\> `slate`](#-fade---slate)
+  - [🔄 `MasterStyleSheet` -\> `MasterCSS`](#-masterstylesheet---mastercss)
+  - [🔄 `MasterStyle` -\> `MasterCSSRule`](#-masterstyle---mastercssrule)
+  - [🔄 `id="master-css"` -\> `title="master"`](#-idmaster-css---titlemaster)
+  - [🔄 `config.colorSchemes` -\> `config.themes`](#-configcolorschemes---configthemes)
 - [更多的 API](#更多的-api)
   - [`render()`](#render)
   - [`renderFromHTML()`](#renderfromhtml)
@@ -224,9 +224,7 @@ fg:$1
 
 讓我們來概覽全新的 `master.css.js` 配置檔 ✨
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     colors: {
         primary: '#175fe9',
     },
@@ -279,12 +277,12 @@ module.exports = configure({
     },
     rootSize: 16,
     Rules: []
-})
+}
 ```
 你可能已經注意到一些新的配置，我們稍後會提到。
 
-## ⚙️ `configure()` 擴展及合併配置
-通常你會希望以擴展的方式來增添額外的配置，我們設計了 `configure()` 的方法讓你在保有預設配置的同時進行擴展及合併配置。
+## ⚙️ 擴展及合併配置
+通常你會希望以擴展的方式來增添額外的配置，我們內建了 `extend()` 的方法讓你在保有預設配置的同時進行擴展及合併配置。
 
 - 深層 `merge` 物件
 - 深層 `concat` 陣列
@@ -292,18 +290,23 @@ module.exports = configure({
 
 舉例：在 `master.css.js` 新增 `'hide-text'` 語意類名及 `'ocean'` 主題，並保留預設值。
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     semantics: {
         'hide-text': 'font-size:0px'
     },
     themes: ['ocean']
     ...
-})
+}
 ```
-最終 `import config from './master.css'` 取得的配置結果：
+在集中管理的 `master.js` 中引入自訂配置並初始：
+```js
+import config from './master.css'
+import { init } from '@master/css'
+
+export const css = init(config)
+```
+取得的配置 `css.config` 結果：
 ```diff
 {
     ...,
@@ -351,9 +354,7 @@ import './master';
 ## ✨ `config.themes` 透過自訂主題大幅簡化標記
 依據不同的主題自訂 `classes`, `colors` 且合併並保留預設值：
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     colors: {
         primary: '#175fe9',
@@ -388,7 +389,7 @@ module.exports = configure({
         }
     },
     ...
-})
+}
 ```
 根據 `light` 及 `dark` 設置內容前景色：
 ```diff
@@ -410,15 +411,13 @@ module.exports = configure({
 ## ✨ `config.selectors` 自訂選取器標記
 擴展自訂選取器標記，合併並保留預設值：
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     selectors: {
         '>custom': '>div>:first+button'
     },
     ...
-})
+}
 ```
 應用它：
 ```diff
@@ -429,9 +428,7 @@ module.exports = configure({
 
 你也可以將一個選取器標記對應多個，以預設的供應商前綴為例：
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     selectors: {
         '::slider-thumb': ['::-webkit-slider-thumb', '::-moz-range-thumb'],
@@ -439,7 +436,7 @@ module.exports = configure({
         ...
     },
     ...
-})
+}
 ```
 應用它：
 ```html
@@ -487,9 +484,7 @@ console.log(css.theme) // default: 'light', 'dark'
 ## ✨ 自定主題方案配置
 以下配置皆為預設值，其中 `scheme.preference` 為網站預設的主題方案偏好。
 ```js
-const { configure } = require('@master/css')
-
-module.exports = configure({
+module.exports = {
     ...,
     scheme: {
         preference: 'system', // 'system', 'dark', 'light'
@@ -499,7 +494,7 @@ module.exports = configure({
         }
     }
     ...
-})
+}
 ```
 
 ## ✨ 在 React 中實作主題切換與介面
@@ -673,9 +668,9 @@ rendered result:
 ## `fillColorScale()`
 將未定義的色階值以相鄰色階值的平均填滿 `1,2,...99`。
 ```js
-import { fillColorScale, configure } from '@master/css'
+import { fillColorScale } from '@master/css'
 
-module.exports = configure({
+module.exports = {
     colors: {
         blue: fillColorScale({
             95: '001141',
@@ -690,7 +685,7 @@ module.exports = configure({
             10: 'edf5ff'
         })
     }
-)
+}
 ```
 如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
 
