--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -336,15 +336,20 @@ Don't forget to include `./master.js` at the entry point of the app, e.g. `./mai
 import './master';
 ```
 
-If you're using a CDN in `<head>` for quick enablement, initialize the Master CSS immediately after importing:
+If you want to configure Master CSS in `<head>`, set the global `window.masterCSSConfig` before importing:
 ```diff
 ...
 <head>
-    <script src="https://cdn.master.co/css@2.0.0-beta.1"></script>
-+   <script>MasterCSS.init()</script>
++   <script>
++       window.masterCSSConfig = {
++           colors: { primary: '#ff0000' }
++       }
++   </script>
+    <script src="https://cdn.master.co/css@2.0.0-beta.12"></script>
 </head>
 ...
 ```
+⚠️ Usually you just want to do this for a quick demonstration in HTML.
 
 ## ✨ `config.themes` greatly simplifies markup with custom themes
 Customize `classes`, `colors` according to different themes and combine and keep default values:
