--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -341,15 +341,20 @@ export const css = init(config)
 import './master';
 ```
 
-如果你是在 `<head>` 中透過 CDN 快速啟用，引入後請立即初始化 Master CSS：
+如果你想在 `<head>` 中配置 Master CSS，在引入前設置全域的 `window.masterCSSConfig`：
 ```diff
 ...
 <head>
-    <script src="https://cdn.master.co/css@2.0.0-beta.1"></script>
-+   <script>MasterCSS.init()</script>
++   <script>
++       window.masterCSSConfig = {
++           colors: { primary: '#ff0000' }
++       }
++   </script>
+    <script src="https://cdn.master.co/css@2.0.0-beta.12"></script>
 </head>
 ...
 ```
+⚠️ 通常你只是想在 HTML 中快速示範才會這麼做。
 
 ## ✨ `config.themes` 透過自訂主題大幅簡化標記
 依據不同的主題自訂 `classes`, `colors` 且合併並保留預設值：
